--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "csa"]
+	path = csa
+	url = https://github.com/imarkonis/csa
+	shallow = true
+	registered = true
